--- a/src/styles.css
+++ b/src/styles.css
@@ -4,11 +4,17 @@ body {
 }
 
 .search-form {
-    padding-top: 40px;
-    padding-bottom: 40px;
-    margin-bottom: 20px;
+    padding-top: 20px;
+    padding-bottom: 20px;
     text-align: center;
     background-color: #c5cc09;
+    
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    z-index: 1;
+       
 }
 
 input {
@@ -36,6 +42,7 @@ input {
     display: flex;
     flex-wrap: wrap;
     justify-content:space-evenly;
+    margin-top: 70px;
     gap: 20px;
 }
 
@@ -65,15 +72,34 @@ input {
     margin: 5px 0;
 }
 
-.load-more {
+.button {
+    display: block;
+    margin-top: 10px;
+    margin-left: auto;
+    margin-right: auto;
     padding: 10px 20px;
+    background-color: #c5cc09;
+    color: #1f23f8;
     font-size: 16px;
-    background-color: #007bff;
-    color: #fff;
     border: none;
+    border-radius: 4px;
     cursor: pointer;
 }
 
-.load-more.hidden {
+.button.is-hidden {
+    display: none;
+}
+
+.button:hover {
+    background-color: #1c07ff;
+    color: #c5cc09;
+}
+
+.button:disabled {
+    background-color: #ccc;
+    cursor: not-allowed;
+}
+
+.button > .spinner.is-hidden {
     display: none;
 }
